Migrate CRDs and mgmt API from XP7 to XP8 (#821) (#825)
